noinst_LIBRARIES = libjhkmodels.a

libjhkmodels_a_SOURCES = \
    jobunit.c \
    rootjobnet.c \
    schedule.c \
    alarm.c \
    connector.c \
    variable.c \
    sleepjob.c \
    clockjob.c \
    datejob.c \
    datecond.c \
    vardatum.c \
    sshjob.c \
    winjob.c \
    condition.c \
    emailjob.c \
    jobresult.c \
    execlog.c \
    jhkjoblog.c \
    calendar.c \
    calendar_date.c \
    configure.c
